techpack: audio: Switch from TARGET_PRODUCT to CONFIG_ARCH_KONA

--- a/techpack/audio/asoc/Kbuild
+++ b/techpack/audio/asoc/Kbuild
@@ -229,7 +229,7 @@ ifeq ($(TARGET_PRODUCT), $(filter $(TARGET_PRODUCT),lmi lmiin lmiinpro))
 CDEFINES += -DTFA_ADSP_SUPPORTED
 endif
 
-ifeq ($(TARGET_PRODUCT), $(filter $(TARGET_PRODUCT),lmi lmiin lmiinpro cas umi cmi apollo alioth thyme))
+ifeq ($(CONFIG_ARCH_KONA), y)
 CDEFINES += -DAUDIO_SM8250_FLAG
 endif
 
@@ -253,7 +253,7 @@ ifeq ($(TARGET_PRODUCT), alioth)
 		CDEFINES += -DCONFIG_TARGET_PRODUCT_ALIOTH
 endif
 
-ifeq ($(TARGET_PRODUCT), thyme)
+ifeq ($(CONFIG_ARCH_KONA), y)
                 CDEFINES += -DCONFIG_TARGET_PRODUCT_THYME
 endif
 
