--- a/techpack/audio/asoc/codecs/cs35l41/Kbuild
+++ b/techpack/audio/asoc/codecs/cs35l41/Kbuild
@@ -87,7 +87,7 @@ INCS +=		$(COMMON_INC) \
 
 EXTRA_CFLAGS += $(INCS)
 
-ifeq ($(TARGET_PRODUCT), $(filter $(TARGET_PRODUCT), umi cmi cas apollo alioth thyme))
+ifeq ($(CONFIG_ARCH_KONA), y)
        CDEFINES += -DCONFIG_AUDIO_SMARTPA_STEREO
 endif
 
