--- a/techpack/audio/dsp/Kbuild
+++ b/techpack/audio/dsp/Kbuild
@@ -271,7 +271,7 @@ ifeq ($(KERNEL_BUILD), 0)
 KBUILD_EXTRA_SYMBOLS +=$(OUT)/obj/vendor/qcom/opensource/audio-kernel/ipc/Module.symvers
 endif
 
-ifeq ($(TARGET_PRODUCT), $(filter $(TARGET_PRODUCT),lmi lmiin lmiinpro cas umi cmi apollo alioth thyme))
+ifeq ($(CONFIG_ARCH_KONA), y)
 	CDEFINES += -DAUDIO_SM8250_FLAG
 endif
 
