--- a/arch/arm64/configs/thyme_defconfig
+++ b/arch/arm64/configs/thyme_defconfig
@@ -762,3 +762,4 @@ CONFIG_CORESIGHT_HWEVENT=y
 CONFIG_CORESIGHT_DUMMY=y
 CONFIG_CORESIGHT_REMOTE_ETM=y
 CONFIG_CORESIGHT_TGU=y
+CONFIG_TOUCHSCREEN_COMMON=y
