--- a/drivers/staging/ksu/Makefile
+++ b/drivers/staging/ksu/Makefile
@@ -13,18 +13,19 @@ obj-y += kernel_compat.o
 
 obj-y += selinux/
 # .git is a text file while the module is imported by 'git submodule add'.
-ifeq ($(shell test -e $(srctree)/$(src)/../.git; echo $$?),0)
+
+ifeq ($(shell test -e $(srctree)/.git; echo $$?),0)
 # We must use the absolute path to git, otherwise the build will fail if git is not in the PATH
-KSU_GIT_VERSION := $(shell cd $(srctree)/$(src);/usr/bin/git rev-list --count HEAD)
+KSU_GIT_VERSION := $(shell cd $(srctree);/usr/bin/git rev-list --count HEAD)
 ccflags-y += -DKSU_GIT_VERSION=$(KSU_GIT_VERSION)
 endif
 
 ifndef EXPECTED_SIZE
-EXPECTED_SIZE := 0x033b
+EXPECTED_SIZE := 0x04ac
 endif
 
 ifndef EXPECTED_HASH
-EXPECTED_HASH := 0xb0b91415
+EXPECTED_HASH := 0xa0bec938
 endif
 
 ccflags-y += -DEXPECTED_SIZE=$(EXPECTED_SIZE)
